# SBG_IG_500N_G4A2P1-B

./: README.md  Readme
sbg_lib/: CMakeLists.txt~
sbg_lib/include/protocol/: commands.h  commandsExt.h  commandsFilter.h  commandsOdo.h  protocol.h  protocolOutputMode.c~  protocolOutputMode.h
sbg_lib/lib/: CMakeLists.txt  CMakeLists.txt~  sbgCom.c  sbgCom.h  sbgComVersion.h
sbg_lib/lib/comWrapper/: comSerialUnix.c  comSerialWin.c  comWrapper.h
sbg_lib/lib/protocol/: commandsCalib.h  commandsGps.c  commandsGps.h  commandsOdo.c  commandsOrientation.c  commandsOrientation.h  commandsOutput.c  commandsOutput.h  commandsSync.h  protocolOutput.c
sbg_lib/lib/protocol/extDevices/: extNmea.h
sbg_test/: CMakeLists.txt  CMakeLists.txt~  ig500Continuous.c  imufactorbug.cpp
sbg_test/include/: sbgCommon.h
sbg_test/include/comWrapper/: comDataLog.c
sbg_test/include/protocol/: commands.c  commandsCalib.c  commandsExt.c  commandsFilter.c  commandsNav.c  commandsNav.h  commandsSync.c  protocol.c  protocolOutput.h  protocolOutputMode.c
sbg_test/include/protocol/extDevices/: extIg.c  extIg.h  extNmea.c
